# crcFinder

./: README.md  pyproject.toml
src/crcFinder/: __init__.py  __main__.py  calculator.py  finder.py  solver.py
tests/: test_Calculator.py  test_Finder.py  test_Solver.py
