[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crcFinder"
version = "0.0.4"
authors = [
  { name="leommxj", email="leommxj@gmail.com" },
]
description = "A tool to find well known crc params that matches the input data and crc result (right or wrong)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leommxj/crcFinder"